deployments/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <parameters.name>
  namespace: default #<parameters.name>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <parameters.name>
  template:
    metadata:
      labels:
        app: <parameters.name>
    spec:
      containers:
        - name: <parameters.name>
          image: <GH_ACTION.docker_username>/<parameters.name>:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      
---
apiVersion: v1
kind: Service
metadata:
  name: <parameters.name>-service
  namespace:  default #<parameters.name>
spec:
  selector:
    app: <parameters.name>
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: <parameters.name>-http
  namespace:  default #<parameters.name>
spec:
  virtualhost:
    fqdn: <parameters.fqdn>
    tls:
      secretName: <parameters.name>dora
  routes:
    - services:
        - name: <parameters.name>-service
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <parameters.name>-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: <parameters.fqdn>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <parameters.name>-service
                port:
                  number: 80
  tls:
    - hosts:
        - <parameters.fqdn>
      secretName: <parameters.name>dora
